[project]
name = "Basilisk_for_MicroPython"
version = "0.2.0"
description = "Testing Type checking with Basilisk and MicroPython"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = []


[project.optional-dependencies]
# install to folder typings
# uv pip install -r pyproject.toml --extra stubs --target typings
stubs = [
  "micropython-stdlib-stubs==1.28.0.*",
  "micropython-esp32-stubs==1.28.0.*"
]



# ###################################################################
# basilisk options:

[tool.basilisk]
python-version = "3.9"
python-platform = "Linux"
stub-paths = ["typings"]
typeshed-path = "typings"



# ###################################################################
# pyright options:

[tool.pyright]
include = ["src"]
ignore = ["**/typings"]
exclude = [".*", "__*", "**/typings"]

typeCheckingMode = "basic"
stubPath = "typings"
typeshedPath = "typings"
pythonVersion = "3.9"
pythonPlatform = "Linux"
useLibraryCodeForTypes = false

reportMissingModuleSource = "none"
reportUnnecessaryTypeIgnoreComment = "error"


# ###################################################################
# mypy global options:
[tool.mypy]
platform = "linux"
mypy_path = "typings"
custom_typeshed_dir = "typings" # allow mypy to use micropython-stdlib
files = "src/*.py"
exclude = [
    "typings[\\/].*", # TOML basic string 
]

follow_imports = "silent"
follow_imports_for_stubs = true
no_site_packages = true
check_untyped_defs = true
disable_error_code = ["no-redef", "assignment", "var-annotated"]


